syntax = "proto3";

package user.user;


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "utils/paginate.proto";

import "user/auth.proto";

option go_package = "user.user";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  schemes: HTTPS;
  host: "api.zuoyinyun.com";
};

service UserService {
  rpc LoginMobile(LoginMobileRequest) returns (auth.Token) {
    option (google.api.http) = {
      post: "/user.user.UserService/loginMobile",
      body: "*"
    };
  }
  rpc RegisterMobile(RegisterMobileRequest) returns (auth.Token) {
    option (google.api.http) = {
      post: "/user.user.UserService/registerMobile",
      body: "*"
    };
  }

  rpc LoginWeixin(LoginWeixinRequest) returns (auth.Token) {
    option (google.api.http) = {
      post: "/user.user.UserService/loginWeixin",
      body: "*"
    };
  }

  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/wx.user.UserService/users/{id}"
    };
  }

  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {
    option (google.api.http) = {
      get: "/wx.user.UserService/info/{id}"
    };
  }
  rpc UpdateInfo(UpdateInfoRequest) returns (UpdateInfoResponse) {
    option (google.api.http) = {
      put: "/wx.user.UserService/info/{id}",
      body: "*"
    };
  }
}

// 用户
message User {
  string id = 1; // user_id
  int32 info_id = 2;
  optional int32 mobile_id = 3;
  optional int32 weixin_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message NewUser {
  int32 info_id = 1;
  optional int32 mobile_id = 2;
  optional int32 weixin_id = 3;
}

// 用户信息
message Info {
  int32 id = 1;
  string name = 2;
  optional int32 avatar = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message NewInfo {
  string name = 1;
  optional int32 avatar = 2;
}

// 手机用户
message Mobile {
  int32 id = 1;
  string mobile = 2;
  string password = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message NewMobile {
  string mobile = 1;
  string password = 2;
}

// 微信用户
message Weixin {
  int32 id = 1;
  string openid = 2; // 微信 openid
  optional string unionid = 3; // 微信 unionid TODO: 加入开放平台则有值
  string session_key = 4; // session_key
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message NewWeixin {
  string openid = 1; // 微信 openid
  optional string unionid = 2; // 微信 unionid TODO: 加入开放平台则有值
  string session_key = 3; // session_key
}

message LoginMobileRequest {
  string client_id = 1;
  string mobile = 2;
  string password = 3;
}

message RegisterMobileRequest {
  string client_id = 1;
  string mobile = 2;
  string password = 3;
}

message LoginWeixinRequest {
  string client_id = 1;
  string code = 2;
}

message GetRequest {
  string id = 1;
}
message GetResponse {
  User user = 1;
}

message GetInfoRequest {
  int32 id = 1;
}
message GetInfoResponse {
  Info info = 1;
}

message UpdateInfoRequest {
  int32 id = 1;
  NewInfo info = 2;
}
message UpdateInfoResponse {
  Info info = 1;
}